--- a/src/styles/rent/rent.css
+++ b/src/styles/rent/rent.css
@@ -20,9 +20,20 @@
   object-position: 0 20%;
 }
 
+.lists-hover:hover {
+  background-color: rgb(182, 217, 247);
+}
+
+.aturan {
+  width: 75%;
+}
+
 /* LG */
 @media (max-width: 992px) {
   .carousel {
+    width: 100%;
+  }
+  .aturan {
     width: 100%;
   }
 }
